# ParametrixExtension-----working-

./: .gitignore  BUGFIX_SUMMARY.md  CURRENTCHAT.md  Cutter.rb  LICENSE_SETUP.md  LOAD_UPDATED_PARAMETRIX.rb  Oob.rb  PARAMETRIX.rb  PARAMETRIX_Documentation.html  QUICK_FIX_REFERENCE.md  QUICK_RELOAD.rb  README.md  RELOAD_ALL.rb  RELOAD_AND_TEST.rb  RELOAD_AND_TEST_RAILS.rb  RELOAD_COMPLETE.rb  RELOAD_MITERED_RAILS.rb  RELOAD_OOB_V7.rb  RELOAD_TRIMMING_FIX.rb  RELOAD_TRIMMING_FIXED.rb  RELOAD_TRIMMING_ONLY.rb  RELOAD_TRIMMING_TEST.rb  RELOAD_V4.rb  SOLUTION_SUMMARY.md  chat_history.txt  deploy-complete.md  deploy-edge-function.ps1  force_reload.rb  geometry_diagnostic.rb  get-supabase-keys.md  latest_chat.md  manual-deployment-guide.md  parametrix_engine_mock.bat  private_key.pem  public_key.pem  reload.rb  restore_licensing.rb  reviews.txt  sucess.md  test-edge-function.js  (+6 more)
_BACKUP_NOT_FOR_GITHUB/: TRIMMING_V4_TEST_GUIDE.md  database_schema.sql  database_update_v2.sql  edge_function_index.ts  generate-keys.js  generate-user-license.js  generate_keys.mjs
cpp_prototype/: INTEGRATION_GUIDE.md  MANUAL_BUILD_STEPS.md  PARAMETRIX_GEOMETRY_ENGINE.md  correct_3d_trimming_demo.rb  correct_extension_sequence.rb  geometry_bridge.rb  simple_compile.bat  standalone_concept_demo.rb  test_l_shape_fix.rb  trimming_v4_cpp.rb  universal_face_trimming_demo.rb
cpp_prototype/geometry_engine/: CMakeLists.txt  main.cpp
dev_dir/: QUICK_FIX_REFERENCE.md  build_engine.bat  chatupdate.md  test_cpp_integration.rb
dev_dir/SketchUpSDK/: Trimble-Developer-Terms.url
dev_dir/SketchUpSDK/documentation/layout/: _lay_out_01_c_01_a_p_i_01_release_01_notes_8md.html  _lay_out_a_p_i_2application_2application_8h.html  _lay_out_a_p_i_2application_2application_8h_source.html  _lay_out_a_p_i_2common_8h.html  _lay_out_a_p_i_2common_8h_source.html  _lay_out_a_p_i_2geometry_2geometry_8h.html  _lay_out_a_p_i_2geometry_2geometry_8h_source.html  _lay_out_a_p_i_2model_2defs_8h.html  _lay_out_a_p_i_2model_2defs_8h_source.html  _sketch_up_a_p_i_2application_2application_8h.html  _sketch_up_a_p_i_2application_2application_8h_source.html  _sketch_up_a_p_i_2common_8h.html  (+248 more)
dev_dir/SketchUpSDK/samples/Overlays/cpp/: CMakeLists.txt  exports.hpp  image2d_overlay.cpp
lib/PARAMETRIX/: commands.rb  core.rb  dialog-box-recommendation.md  layout_engine.rb  license_dialog.rb  license_manager.rb  loader.rb  support_dialog.rb  toolbar.rb  trial_manager.rb  trimming_v3.rb  trimming_v4_enhanced.rb  ui_dialog_newui.rb
lib/jwt/: base64.rb  configuration.rb  decode.rb  encode.rb  json.rb  jwa.rb  version.rb
lib/jwt/configuration/: container.rb  decode_configuration.rb  jwk_configuration.rb
lib/jwt/jwk/: kid_as_key_digest.rb  thumbprint.rb
node_scripts/: .env  admin-old.js  admin.mjs  edge_function.js  package-lock.json  package.json
supabase/.temp/: pooler-url  project-ref
supabase/functions/create-trial/: index.ts
supabase/functions/validate-license/: index.ts
(+515 files in other folders)
